<resources>
    <string name="app_name">KidsWarmUp</string>
    <string name="device_admin_receiver_label">KidsWarmUp</string>
    <string name="device_admin_receiver_description">Used to lock user in KidsWarmUp app</string>
    <string name="button_stop_label">Stop</string>
    <string name="button_start_label">Start</string>
    <string name="default_steps_setup" translatable="false">1</string>
    <string name="steps_count_hint">Desired steps count</string>
    <string name="enable_device_admin">\"Please enable device admin\"</string>
    <string name="set_lock_packages_failed">\"setLockTaskPackages() failed. Is app a Device Owner?\"</string>
    <string name="set_lock_permitted_failed">\"isLockTaskPermitted() failed. Is app a Device Owner?\"</string>
    <string name="set_lock_features_failed">\"setLockTaskFeatures() failed. Is app a Device Owner?\"</string>
    <string name="app_is_not_device_admin">App is not a Device Admin!</string>
    <string name="app_is_device_admin">App is a Device Admin</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="app_close">App Close</string>
    <string name="settings_header">Settings</string>
    <string name="sync_header">Sync</string>
    <string name="devadm_header">Device Admin</string>

    <!-- Settings Preferences -->
    <string name="app_autorun">AutoRun</string>
    <string name="timeout_title">Timeout (minutes)</string>
    <string name="timeout_init_switch">Initial timeout enable</string>
    <string name="timeout_init_title">Initial timeout (minutes)</string>
    <string name="step_target_title">Step target (numbers)</string>
    <string name="menu_password">Password</string>
    <string name="app_version">Version</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Device Admin -->
    <string name="devadm_setup_title">Device Admin Settings</string>
    <string name="devadm_setup_summary"></string>
    <string name="devadm_title"></string>
    <string name="title_activity_settings_device_admin">SettingsDeviceAdmin</string>
    <string name="devadm_activate_title">Activate Device Admin</string>
    <string name="devadm_activate_button">Activate Device Admin</string>
    <string name="devadm_install_title">Install Device Owner</string>
    <string name="devadm_install_button">Install Device Owner</string>
    <string name="devadm_policies_title">Device Policies (optional)</string>
    <string name="devadm_policies_button">Replace file device_policies.xml</string>
    <string name="devadm_reboot_title">Reboot device</string>
    <string name="devadm_reboot_button">Reboot device</string>
    <string name="devadm_delete_title">Delete Device Admin/Owner</string>
    <string name="devadm_delete_button">Delete Device Admin/Owner</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>

</resources>