<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:iconSpaceReserved="false"
        app:widgetLayout="@layout/pref_app_close_button"
        />

    <PreferenceCategory app:title="@string/settings_header">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="app_autorun"
            app:title="@string/app_autorun" />

        <EditTextPreference
            app:defaultValue="60"
            app:key="timeout"
            app:title="@string/timeout_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="timeout_init_use"
            app:title="@string/timeout_init_switch" />

        <EditTextPreference
            app:defaultValue="5"
            app:key="timeout_init"
            app:dependency="timeout_init_use"
            app:title="@string/timeout_init_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="10"
            app:key="step_target"
            app:title="@string/step_target_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/menu_password">
        <EditTextPreference
            app:defaultValue="1234"
            app:key="menu_password"
            app:title="@string/menu_password"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/devadm_header">
        <Preference
            app:title="@string/devadm_setup_title"
            app:summary="@string/devadm_setup_summary"
            app:fragment="app.kidswarmup.SettingsActivity$DeviceAdminFragment"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_version">
        <EditTextPreference
            app:key="app_version"
            app:enabled="false"
            app:title="@string/app_version"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>