<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/devadm_install_title">
        <Preference
            app:iconSpaceReserved="false"
            app:widgetLayout="@layout/pref_devadm_install_button"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/devadm_policies_title">
        <Preference
            app:iconSpaceReserved="false"
            app:widgetLayout="@layout/pref_devadm_policies_button"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/devadm_activate_title">
        <Preference
            app:iconSpaceReserved="false"
            app:widgetLayout="@layout/pref_devadm_activate_button"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/devadm_delete_title">
        <Preference
            app:iconSpaceReserved="false"
            app:widgetLayout="@layout/pref_devadm_delete_button" />
    </PreferenceCategory>

</PreferenceScreen>